# KTU-S2-LAB

./: 12-count-vowels-consonants-spaces.c  21-sum-array-pointers.c  23-count-characters.c  3-ii-sum.c  5-prime-or-not.c  CMakeLists.txt  README.md  address.c  armstrong.c  bubble.c  concatenat.c  euclidean.c  evaluvate.c  id.c  largest.c  linear.c  manupulation.c  matrix.c  palidrome.c  pointadd.c  pointstring.c  pointswap.c  radius.c  swap.c
.github/workflows/: .build_and_format.yml.swp  build_and_format.yml
src/: 03-i-hello-world.c  03-ii-sum.c  03-iv-expression.c  04-largest-among-three.c  05-prime-or-not.c  06-armstrong-number.c  07-sum-and-average.c  08-linear-search.c  09-bubble-sort.c  10-palindrome-word.c  11-concatenate-strings.c  12-count-vowels-consonants-spaces.c  13-distance-struct.c  14-employee-data-structure.c  15-address-union.c  16-factorial.c  17-reverse-string.c  18-matrix-operations.c  19-i-pointers-add.c  19-ii-pointers-swap.c  20-array-pointers-input-output.c  21-sum-array-pointers.c  22-file-operations.c  23-count-characters.c  CMakeLists.txt
